[project]
name = "encrypted-voice-forum"
version = "0.1.0"
description = ""
authors = [
    {name = "tallywiesenberg",email = "t.j.wies@gmail.com"},
    {name = "rebeccadukewiesenberg", email = "rdukewiesenb@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "ipfshttpclient (>=0.7.0,<0.8.0)",
    "click (>=8.3.0,<9.0.0)",
    "eth-account (>=0.13.7,<0.14.0)",
    "cryptography (>=46.0.2,<47.0.0)",
    "coincurve (>=21.0.0,<22.0.0)",
    "eth-keys (>=0.7.0,<0.8.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "encrypted_voice_forum", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
